# GraCFL

./: CMakeLists.txt  README.md
example/: example.cpp
include/gracfl/: BIGracfl.hpp  BWGracfl.hpp  FWGracfl.hpp  FWGracflParallel.hpp  GraCFLSolver.hpp
include/solvers/: Solver.hpp  SolverBIGram.hpp  SolverBITopo.hpp  SolverBWGram.hpp  SolverBWGramParallel.hpp  SolverBWTopo.hpp  SolverBWTopoParallel.hpp  SolverBase.hpp  SolverFWGram.hpp  SolverFWGramParallel.hpp  SolverFWTopo.hpp  SolverFWTopoParallel.hpp  SolverGraCFL.hpp
include/utils/: Config.hpp  Edges.hpp  graphuse.cpp
include/utils/graphs/: Graph.hpp  Graph2DBi.hpp  Graph2DIn.hpp  Graph2DOut.hpp  Graph3DBi.hpp  Graph3DIn.hpp  Graph3DOut.hpp
src/: main.cpp
src/gracfl/: BIGracfl.cpp  BWGracfl.cpp  FWGracfl.cpp  FWGracflParallel.cpp  GraCFLSolver.cpp
src/solvers/: Solver.cpp  SolverBIGram.cpp  SolverBITopo.cpp  SolverBWGram.cpp  SolverBWGramParallel.cpp  SolverBWTopo.cpp  SolverBWTopoParallel.cpp  SolverFWGram.cpp  SolverFWGramParallel.cpp  SolverFWTopo.cpp  SolverFWTopoParallel.cpp  SolverGraCFL.cpp
src/utils/: Config.cpp
src/utils/graphs/: Graph.cpp  Graph3DBi.cpp  Graph3DIn.cpp  Graph3DOut.cpp
